feat: :sparkles: 添加点云数据处理脚本(csv2h5+normalization)并更新.gitignore以忽略输出文件

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ mitochondrial_analysis/*.tif.zip
 Automated_segmentation/*.tif
 Automated_segmentation/*.pt
 Automated_segmentation/*.zip
+outputs/*
